--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
