--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-git-hooks",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
